@@ -470,6 +470,8 @@ name|get
 argument_list|()
 condition|)
 block|{
+try|try
+block|{
 name|serverLeases
 operator|.
 name|createLease
@@ -483,6 +485,29 @@ name|s
 argument_list|)
 argument_list|)
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Leases
+operator|.
+name|LeaseStillHeldException
+name|e
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|debug
+argument_list|(
+literal|"Lease still held on "
+operator|+
+name|e
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+return|return;
+block|}
 block|}
 name|HServerLoad
 name|load
